--- a/移动Web/案例-WJS/index.html
+++ b/移动Web/案例-WJS/index.html
@@ -82,7 +82,45 @@
       </div>
     </nav>
 
+    <!-- 轮播图 -->
+    <div class="wjs_banner">
+      <!-- 整个轮播容器 -->
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators 指示器 (小圆点) -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+        </ol>
 
+        <!-- Wrapper for slides 轮播容器(存放所有的轮播图) -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <img data-psrc="./images/slide_01_2000x410.jpg" data-msrc="./images/slide_01_640x340.jpg">
+          </div>
+          <div class="item">
+            <img data-psrc="./images/slide_02_2000x410.jpg" data-msrc="./images/slide_02_640x340.jpg">
+          </div>
+          <div class="item">
+            <img data-psrc="./images/slide_03_2000x410.jpg" data-msrc="./images/slide_03_640x340.jpg">
+          </div>
+          <div class="item">
+            <img data-psrc="./images/slide_04_2000x410.jpg" data-msrc="./images/slide_04_640x340.jpg">
+          </div>
+        </div>
+
+        <!-- Controls 控制器 (左右箭头) -->
+        <a class="left carousel-control hidden-xs" href="#carousel-example-generic" data-slide="prev">
+          <!-- 左箭头 -->
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control hidden-xs" href="#carousel-example-generic" data-slide="next">
+          <!-- 右箭头 -->
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+      </div>
+    </div>
     <script src="./lib/jquery/jquery-1.12.4.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
