--- a/移动Web/案例-WJS/index.html
+++ b/移动Web/案例-WJS/index.html
@@ -121,6 +121,98 @@
         </a>
       </div>
     </div>
+
+    <!-- 信息交易 -->
+    <div class="wjs_info hidden-xs">
+      <div class="container">
+        <div class="col-sm-6 col-md-4">
+          <a href="#" class="media">
+            <div class="media-left">
+              <i class="wjs_icon wjs_icon_info"></i>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">支付交易保障</h4>
+              <p>银联支付全程保证支付安全</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <a href="#" class="media">
+            <div class="media-left">
+              <i class="wjs_icon wjs_icon_info"></i>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">支付交易保障</h4>
+              <p>银联支付全程保证支付安全</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <a href="#" class="media">
+            <div class="media-left">
+              <i class="wjs_icon wjs_icon_info"></i>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">支付交易保障</h4>
+              <p>银联支付全程保证支付安全</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <a href="#" class="media">
+            <div class="media-left">
+              <i class="wjs_icon wjs_icon_info"></i>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">支付交易保障</h4>
+              <p>银联支付全程保证支付安全</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <a href="#" class="media">
+            <div class="media-left">
+              <i class="wjs_icon wjs_icon_info"></i>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">支付交易保障</h4>
+              <p>银联支付全程保证支付安全</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <a href="#" class="media">
+            <div class="media-left">
+              <i class="wjs_icon wjs_icon_info"></i>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">支付交易保障</h4>
+              <p>银联支付全程保证支付安全</p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- 预约模块 -->
+    <div class="wjs_book">
+      <div class="container">
+        <!-- pull-left 左浮动   pull-right 右浮动 -->
+        <div class="pull-left">
+          <i class="wjs_icon wjs_icon_clock"></i>
+          <span>现在有 273 人在排队，累计预约交易成功 7571 次。 什么是预约投标？</span>
+          <a href="#" class="book_now">立即预约</a>
+        </div>
+
+        <!-- 右侧部分在超小屏幕 隐藏 -->
+        <div class="pull-right hidden-xs">
+          <a href="#">
+            <i class="wjs_icon wjs_icon_video"></i>
+            <span>微金所企业宣传片</span>
+          </a>
+        </div>
+      </div>
+    </div>
     <script src="./lib/jquery/jquery-1.12.4.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
