--- a/移动Web/案例-WJS/index.html
+++ b/移动Web/案例-WJS/index.html
@@ -213,6 +213,218 @@
         </div>
       </div>
     </div>
+
+    <!-- 产品模块 -->
+    <div class="wjs_product">
+      <div class="container">
+
+        <div class="ul-wrapper">
+          <!-- 用于切换的导航 -->
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#product01" data-toggle="tab">特别推荐</a></li>
+            <li><a href="#product02" data-toggle="tab">微平台</a></li>
+            <li><a href="#product03" data-toggle="tab">微平台</a></li>
+            <li><a href="#product04" data-toggle="tab">微平台</a></li>
+            <li><a href="#product05" data-toggle="tab">微平台</a></li>
+            <li><a href="#product06" data-toggle="tab">微平台</a></li>
+            <li><a href="#product07" data-toggle="tab">微平台</a></li>
+          </ul>
+        </div>
+
+        <!-- 用于切换的面板 -->
+        <!--
+        大屏幕中屏幕 1行3个
+        小屏幕       1行2个
+        超小屏幕     1行1个
+      -->
+        <div class="tab-content">
+          <div class="tab-pane active" id="product01">
+            <div class="col-sm-6 col-md-4">
+              <div class="product_item current">
+                <i class="wjs_icon wjs_icon_experience"></i>
+                <!-- 先右浮动, 再左边overflow:hidden -->
+                <div class="product_item_right">
+                  <p class="percent"><b>8</b>%</p>
+                  <p class="rate">年利率</p>
+                </div>
+                <div class="product_item_left">
+                  <h3 class="title">新手体验01期</h3>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="product_item">
+                <i class="wjs_icon wjs_icon_experience"></i>
+                <!-- 先右浮动, 再左边overflow:hidden -->
+                <div class="product_item_right">
+                  <p class="percent"><b>8</b>%</p>
+                  <p class="rate">年利率</p>
+                </div>
+                <div class="product_item_left">
+                  <h3 class="title">新手体验01期</h3>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="product_item">
+                <i class="wjs_icon wjs_icon_experience"></i>
+                <!-- 先右浮动, 再左边overflow:hidden -->
+                <div class="product_item_right">
+                  <p class="percent"><b>8</b>%</p>
+                  <p class="rate">年利率</p>
+                </div>
+                <div class="product_item_left">
+                  <h3 class="title">新手体验01期</h3>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="product_item">
+                <i class="wjs_icon wjs_icon_experience"></i>
+                <!-- 先右浮动, 再左边overflow:hidden -->
+                <div class="product_item_right">
+                  <p class="percent"><b>8</b>%</p>
+                  <p class="rate">年利率</p>
+                </div>
+                <div class="product_item_left">
+                  <h3 class="title">新手体验01期</h3>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="product_item">
+                <i class="wjs_icon wjs_icon_experience"></i>
+                <!-- 先右浮动, 再左边overflow:hidden -->
+                <div class="product_item_right">
+                  <p class="percent"><b>8</b>%</p>
+                  <p class="rate">年利率</p>
+                </div>
+                <div class="product_item_left">
+                  <h3 class="title">新手体验01期</h3>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="product_item">
+                <i class="wjs_icon wjs_icon_experience"></i>
+                <!-- 先右浮动, 再左边overflow:hidden -->
+                <div class="product_item_right">
+                  <p class="percent"><b>8</b>%</p>
+                  <p class="rate">年利率</p>
+                </div>
+                <div class="product_item_left">
+                  <h3 class="title">新手体验01期</h3>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                  <div class="col-xs-6 text-right">
+                    <p>起投金额</p>
+                    <p>0.01万</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane" id="product02">222</div>
+          <div class="tab-pane" id="product03">333</div>
+          <div class="tab-pane" id="product04">444</div>
+          <div class="tab-pane" id="product05">555</div>
+          <div class="tab-pane" id="product06">666</div>
+          <div class="tab-pane" id="product07">777</div>
+        </div>
+
+      </div>
+
+    </div>
     <script src="./lib/jquery/jquery-1.12.4.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
